--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -6,3 +6,6 @@
         <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
         <span style="color:red">Ya</span>tube
       </a>
+    </div>
+  </nav>
+</header>
