--- a/yatube/templates/includes/navigation.html
+++ b/yatube/templates/includes/navigation.html
@@ -5,7 +5,7 @@
     </a>
   </li>
   <li>
-    <a class="navbar-brand" href="{% url 'posts:posts_friends' %}">
+    <a class="navbar-brand" href="{% url 'posts:group_posts' post.group.slug %}">
       Посты друзей
     </a>
   </li>
