--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,4 +1,6 @@
-﻿{% for post in posts %}
+﻿{% extends "base.html" %}
+{% block content %}
+{% for post in posts %}
   <ul>
     <li>
       Автор: {{ post.author.get_full_name }}
@@ -8,10 +10,7 @@
     </li>
   </ul>
   <p>{{ post.text }}</p>    
-  <a href="">все записи группы</a>
+  <a class="btn btn-primary my-5" href="">все записи группы</a>
   {% if not forloop.last %}<hr>{% endif %}
 {% endfor %}
-
-
-
-
+{% endblock %}
