--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -2,7 +2,6 @@
 {% block title %}
   Записи сообщества {{ group.title }}
 {% endblock %}
-{% include 'includes/header.html' %}
 {% block content %}
   <div class="container py-5">
     <h1> Записи сообщества: {{ group.title }}</h1>
@@ -11,29 +10,19 @@
       Создана: {{ group.pub_date|date:"d E Y" }}<hr>
     </p>
     <article>
-      {% for post in page_obj %}
-        <ul>
-          <li>
-            Автор: {{ post.author.get_full_name }}
-            <a href="{% url 'posts:profile' post.author.username %}">
-              все посты пользователя
-            </a>
-          </li>
-          <li>
-            Дата публикации: {{ post.pub_date|date:"d E Y" }}
-          </li>
-        </ul>
-        <p>
-          {{ post.text }}
-        </p>
-         {% if post.group %}
-         <a href="{% url 'posts:group_list' post.group.slug %}">
-           все записи группы
-         </a>
-       {% endif %}
+      {% for post in posts %}
+      <ul>
+        <li>
+          Автор: {{ post.author.get_full_name }}
+        </li>
+        <li>
+          Дата публикации: {{ post.pub_date|date:"d E Y" }}
+        </li>
+      </ul>
+      <p>{{ post.text }}</p>    
+      <a class="btn btn-primary my-5" href="">все записи группы</a>
       {% if not forloop.last %}<hr>{% endif %}
-      {% endfor %}
+    {% endfor %}
     </article>
   </div>
 {% endblock %}
-{% include 'includes/footer.html' %}
