--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -9,8 +9,10 @@
       Дата публикации: {{ post.pub_date|date:"d E Y" }}
     </li>
   </ul>
-  <p>{{ post.text }}</p>    
-  <a class="btn btn-primary my-5" href="">все записи группы</a>
+  <p>{{ post.text }}</p>
+     {% if post.group.slug %} 
+     <a href="{% url "posts:group_posts" post.group.slug %}">все записи группы</a>
+     {% endif %}
   {% if not forloop.last %}<hr>{% endif %}
 {% endfor %}
 {% endblock %}
