--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,4 +1,9 @@
 ﻿{% extends "base.html" %}
+<title>
+  {% block title %}
+    Последние обновления на сайте
+  {% endblock %}
+</title>
 {% block content %}
 {% for post in posts %}
   <ul>
@@ -10,11 +15,9 @@
     </li>
   </ul>
   <p>{{ post.text }}</p>
-     {% if post.group.posts %} 
-     <a href="{% url "posts:group_posts" post.group.slug %}">все записи группы</a>
+     {% if post.group.slug %} 
+     <a href="{% url "posts:group_posts" post.group.slug %}"{{ group.title }}>все записи группы</a>
      {% endif %}
   {% if not forloop.last %}<hr>{% endif %}
 {% endfor %}
-{% block title %}
-{% endblock %}
 {% endblock %}
