--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,9 +1,7 @@
 ﻿{% extends "base.html" %}
-<title>
   {% block title %}
     Последние обновления на сайте
   {% endblock %}
-</title>
 {% block content %}
 {% for post in posts %}
   <ul>
@@ -15,7 +13,7 @@
     </li>
   </ul>
   <p>{{ post.text }}</p>
-     {% if post.group.slug %} 
+     {% if post.group %} 
      <a href="{% url "posts:group_posts" post.group.slug %}"{{ group.title }}>все записи группы</a>
      {% endif %}
   {% if not forloop.last %}<hr>{% endif %}
