--- a/yatube/templates/includes/footer.html
+++ b/yatube/templates/includes/footer.html
@@ -1,1 +1,4 @@
-﻿<p>2021 <span style="color:red">Ya</span>tube</p>
+﻿<footer class="border-top text-center py-3">
+    <p>© {{ year }} Copyright <span style="color:red">Ya</span>tube</p>    
+  </footer>
+  
