--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -3,7 +3,7 @@
     Последние обновления на сайте
   {% endblock %}
 {% block content %}
-{% for post in posts %}
+{% for post in page_obj %}
   <ul>
     <li>
       Автор: {{ post.author.get_full_name }}
@@ -18,4 +18,5 @@
      {% endif %}
   {% if not forloop.last %}<hr>{% endif %}
 {% endfor %}
+{% include 'posts/includes/paginator.html' %}
 {% endblock %}
