--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -2,6 +2,15 @@
 <html lang="ru"> 
   <head>  
     <!-- Подключены иконки, стили и заполенены мета теги -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="{% static 'img/logo.png' %}" type="image">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static "img/fav/apple-touch-icon.png" %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static "img/fav/favicon-32x32.png" %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static "img/fav/favicon-16x16.png" %}">
+    <meta name="msapplication-TileColor" content="#000">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <title>Пост <!-- Первые 30 букв поста --></title>
   </head>
   <body>       
@@ -20,20 +29,22 @@
         <aside class="col-12 col-md-3">
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
-              Дата публикации: <!-- 31 июля 1854 --> 
+              Дата публикации: <!-- 31 июля 1854 --> {{ post.pub_date|date:"31.07.1854" }}
             </li>
+            {% if post in group %}
             <!-- если у поста есть группа -->   
               <li class="list-group-item">
                 Группа: <!-- Название группы -->
-                <a href="<!-- -->">
+                <a href=" {% url posts.group.group_list %}" "<!-- -->">
                   все записи группы
                 </a>
               </li>
+            {% endif %}
               <li class="list-group-item">
-                Автор: <!--Лев Толстой-->
+                Автор: <!--Лев Толстой--> {{ post.author.get_full_name }}
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center">
-              Всего постов автора:  <span ><!-- --></span>
+              Всего постов автора:  <span >{{ author_posts_numbers }}<!-- --></span>
             </li>
             <li class="list-group-item">
               <a href="<!-- -->">
@@ -44,6 +55,7 @@
         </aside>
         <article class="col-12 col-md-9">
           <p>
+            {{ posts_author.text }}
            <!--
             [Фокшаны.] Еще переходъ до Фокшанъ, во время котораго я ѣхалъ съ 
             Монго. Человѣкъ пустой, но съ твердыми, хотя и ложными убѣжденіями.
