--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% extends 'base.html' %}
+{% load static %}
 <html lang="ru"> 
   <head>  
     <meta charset="utf-8">
@@ -10,7 +12,7 @@
     <meta name="msapplication-TileColor" content="#000">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <title>Профайл пользователя <!--Лев Толстой--></title>
+    <title>Профайл пользователя {{ posts_author.author.get_full_name }}<!--Лев Толстой--></title>
   </head>
   <body>       
     <header>
@@ -25,8 +27,8 @@
     </header>
     <main>
       <div class="container py-5">        
-        <h1>Все посты пользователя <!--Лев Толстой--> </h1>
-        <h3>Всего постов: <!-- --> </h3>   
+        <h1>Все посты пользователя  {{ posts_author.author.get_full_name }}<!--Лев Толстой--> </h1>
+        <h3>Всего постов: {{ author_posts_numbers }}<!-- --> </h3>   
         <article>
           <ul>
             <li>
@@ -34,10 +36,11 @@
               <a href="{% url "posts:group_posts" post.group.slug %}"{{ group.title }}>все посты пользователя</a>
             </li>
             <li>
-              Дата публикации: <!-- 31 июля 1854 --> 
+              Дата публикации: {{ post.pub_date|date:"d E Y" }}<!-- 31 июля 1854 --> 
             </li>
           </ul>
           <p>
+          {{ posts_author.text }}
           <!--
             [Фокшаны.] Еще переходъ до Фокшанъ, во время котораго я ѣхалъ съ 
             Монго. Человѣкъ пустой, но съ твердыми, хотя и ложными убѣжденіями.
@@ -55,6 +58,7 @@
         <a href="<!-- -->">все записи группы</a>        
         <hr>
         <!-- Остальные посты. после последнего нет черты -->
+        {% include 'posts/includes/paginator.html' %}
         <!-- Здесь подключён паджинатор -->  
       </div>
     </main>
