--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -17,27 +17,27 @@
           <a class="nav-link" href="{% url 'about:author' %}">Об авторе</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="<!--  -->">Технологии</a>
+          <a class="nav-link" href="{% url 'about:tech' %}">Технологии</a>
         </li>
-        {% if user.is_authenticated %}<!-- Проверка: авторизован ли пользователь? --> 
+        {% if user.is_authenticated %}
         <li class="nav-item"> 
           <a class="nav-link" href="<!--  -->">Новая запись</a>
         </li>
         <li class="nav-item"> 
-          <a class="nav-link link-light" href="<!--  -->">Изменить пароль</a>
+          <a class="nav-link link-light" href="{% url 'users:singup' %}">Изменить пароль</a>
         </li>
         <li class="nav-item"> 
-          <a class="nav-link link-light" href="<!--  -->">Выйти</a>
+          <a class="nav-link link-light" href="{% url 'users:logout' %}">Выйти</a>
         </li>
         <li>
           Пользователь: {{ user.username }}
         <li>
         {% else %}
         <li class="nav-item"> 
-          <a class="nav-link link-light" href="<!--  -->">Войти</a>
+          <a class="nav-link link-light" href="{% url 'users:login' %}">Войти</a>
         </li>
         <li class="nav-item"> 
-          <a class="nav-link link-light" href="<!--  -->">Регистрация</a>
+          <a class="nav-link link-light" href="{% url 'users:singup' %}">Регистрация</a>
         </li>
         {% endif %}
       </ul>
