--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,30 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
+{% extends 'base.html' %}
 {% load static %} 
-  <head>  
-    <!-- Подключены иконки, стили и заполенены мета теги -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="{% static 'img/logo.png' %}" type="image">
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static "img/fav/apple-touch-icon.png" %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static "img/fav/favicon-32x32.png" %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static "img/fav/favicon-16x16.png" %}">
-    <meta name="msapplication-TileColor" content="#000">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <title>Пост {{ post.text|truncatechars:30 }} <!-- Первые 30 букв поста --></title>
-  </head>
-  <body>       
-    <header>
-      <nav class="navbar navbar-light" style="background-color: lightskyblue">
-        <div class="container">
-          <a class="navbar-brand" href="{% url 'posts:post_detail 'post.post_id  %}">
-            <img src="/static/img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-            <span style="color:red">Ya</span>tube
-          </a>
-        </div>
-      </nav>      
-    </header>
+  {% block title %}Пост {{ post.text|truncatechars:30 }} <!-- Первые 30 букв поста -->{% endblock %}
+  {% block content %}
+  <body>
     <main>
       <div class="row">
         <aside class="col-12 col-md-3">
@@ -43,7 +23,7 @@
                 Автор: <!--Лев Толстой--> {{ post.author.get_full_name }}
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center">
-              Всего постов автора:  <span >{{ posts_numbers }}<!-- --></span>
+              Всего постов автора:  <span >{{ count_posts }}</span>
             </li>
             <li class="list-group-item">
               <a href="{% url 'posts:profile' post.author.username %}">
@@ -54,7 +34,7 @@
         </aside>
         <article class="col-12 col-md-9">
           <p>
-            {{ posts.text }}
+            {{ post.text }}
            <!--
             [Фокшаны.] Еще переходъ до Фокшанъ, во время котораго я ѣхалъ съ 
             Монго. Человѣкъ пустой, но съ твердыми, хотя и ложными убѣжденіями.
@@ -68,6 +48,7 @@
            --> 
           </p>
         </article>
+      {% endblock %}
       </div> 
     </main>
     <footer class="border-top text-center py-3">
